--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'frankiesardo:icepick:3.0.2'
+    compile 'uk.co.chrisjenx:calligraphy:2.1.0'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.0.8-beta'
