--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,12 @@ dependencies {
     compile 'com.google.dagger:dagger:2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
 
-    compile 'com.squareup.okhttp:okhttp:2.3.0'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'org.twitter4j:twitter4j-core:4.0.4'
 
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'frankiesardo:icepick:3.0.2'
     compile 'uk.co.chrisjenx:calligraphy:2.1.0'
+    compile 'com.google.code.gson:gson:2.3.1'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.0.8-beta'
